# AdvancedTooling2024

./: CMakeLists.txt  main.cpp
mge/: config.hpp
